--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -1,3 +1,15 @@
 .hr-line{
-    border: 5px solid rgb(214, 208, 208);
+    border: .5px solid rgb(214, 208, 208);
+}
+
+.answers{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 40px;
+}
+
+button{
+    background-color: white;
+    border: solid 1px rgb(191, 183, 183);
+    border-radius: 9px;
 }
