--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -1,3 +1,4 @@
+
 .hr-line{
     border: .5px solid rgb(214, 208, 208);
 }
@@ -5,10 +6,21 @@
 .answers{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 40px;
+    column-gap: 20px;
 }
 
-button{
+.question-title{
+display: inline-block;
+color:
+#293264;
+font-size: 20px;
+font-weight: 600;
+margin-bottom: 15px;
+}
+
+
+
+input{
     background-color: white;
     border: solid 1px rgb(191, 183, 183);
     border-radius: 9px;
